added default weather display

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <h2 class="has-text-centered is-family-sans-serif is-size-3 has-text-weight-semibold mb-2 pt-2">Search for a City</h2>
             <div class="field has-addons search m-2">
                 <div class="control is-expanded">
-                    <input class="input" type="text" placeholder="San Diego">
+                    <input class="input" type="text" placeholder="Delaware">
+                </div>
+                <div class="control">
+                    <input class="input" type="text" placeholder="Ohio">
                 </div>
                 <div class="control">
                     <a class="button is-info searchbtnName">
@@ -45,8 +48,19 @@
             </div>
         </div>
         <div class="column is-two-thirds m-6 is-multiline is-centered">
-            <div class="columns tile weather-data">
-                <h3 class="is-block current-weather has-text-centered is-family-sans-serif is-size-5 has-text-weight-semibold"></h3>
+            <h3 class="is-block current-weather has-text-centered is-family-sans-serif is-size-5 has-text-weight-semibold"></h3>
+            <div class="columns tile weather-data is-vcentered ">
+                <div class="column is-block has-text-centered ">
+                    <div class="current-temp has-text-weight-bold is-size-4">
+
+                    </div>
+                    <div class="temp-icon">
+
+                    </div>
+                    <div class="weather-desc">
+
+                    </div>
+                </div>
                 <div class="column is-block">
                     <div class="humidity">
 
@@ -74,9 +88,9 @@
             </div>
             <div class="columns next-5-days ">
                 <div class="column m-3 ">
-                    <h3 class="has-text-centered m-2 is-family-sans-serif is-size-5 has-text-weight-bold">Next Five Days</h3>
-                    <div class="columns is-multiline is-centered">
-                        <div class="column tile has-background-info-dark">
+                    <h3 class="has-text-centered m-2 is-family-sans-serif is-size-5 has-text-weight-bold">Next 5 Days</h3>
+                    <div class="columns has-text-white">
+                        <div class="column tile is-vertical has-background-info-dark">
                             <!-- day1 -->
                             <div class="day1">
                             </div>
@@ -90,7 +104,7 @@
 
                             </div>
                         </div>
-                        <div class="column tile has-background-info-dark">
+                        <div class="column tile is-vertical has-background-info-dark">
                             <!-- day2 -->
                             <div class="day2">
 
@@ -105,7 +119,7 @@
 
                             </div>
                         </div>
-                        <div class="column tile  has-background-info-dark">
+                        <div class="column tile is-vertical has-background-info-dark">
                             <!-- day3-->
                             <div class="day3">
 
@@ -120,7 +134,7 @@
 
                             </div>
                         </div>
-                        <div class="column tile  has-background-info-dark">
+                        <div class="column tile is-vertical has-background-info-dark">
                             <!-- day4-->
                             <div class="day4">
 
@@ -135,7 +149,7 @@
 
                             </div>
                         </div>
-                        <div class="column tile has-background-info-dark ">
+                        <div class="column tile is-vertical has-background-info-dark ">
                             <!-- day5-->
                             <div class="day5">
 
@@ -158,7 +172,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
