--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Weather Dashboard</title>
 </head>
@@ -34,13 +34,13 @@
                 </div>
                 <div class="control">
                     <a class="button is-info searchbtnName">
-                        <i class="fas fa-search"></i>
+                         Search
                     </a>
                 </div>
             </div>
             <div class="box">
                 <!-- create buttons here -->
-                <h3 class="has-text-centered is-family-sans-serif is-size-5 has-text-weight-semibold">Your saved cities</h3>
+                <h3 class="is-family-sans-serif is-size-5 has-text-weight-semibold">Your saved cities</h3>
                 <div class="control is-expanded w-100 savedCities">
 
                 </div>
@@ -52,36 +52,36 @@
             <div class="columns tile weather-data is-vcentered ">
                 <div class="column is-block has-text-centered ">
                     <div class="current-temp has-text-weight-bold is-size-4">
-
+                        <!-- temperature -->
                     </div>
                     <div class="temp-icon">
-
+                        <!-- temp icon -->
                     </div>
                     <div class="weather-desc">
-
+                        <!-- weather desc -->
                     </div>
                 </div>
                 <div class="column is-block">
                     <div class="humidity">
-
+                        <!-- humidity -->
                     </div>
                     <div class="wind">
-
+                        <!-- wind -->
                     </div>
                     <div class="uv-index">
-
+                        <!-- uv index -->
                     </div>
                 </div>
 
                 <div class="column is-block">
                     <div class="pressure">
-
+                        <!-- pressure -->
                     </div>
                     <div class="visibility">
-
+                        <!-- visibility -->
                     </div>
                     <div class="dew-point">
-
+                        <!-- dew point -->
                     </div>
                 </div>
 
@@ -91,8 +91,10 @@
                     <h3 class="has-text-centered m-2 is-family-sans-serif is-size-5 has-text-weight-bold">Next 5 Days</h3>
                     <div class="columns has-text-white">
                         <div class="column tile is-vertical has-background-info-dark">
+                            <!-- 5 days weather details -->
                             <!-- day1 -->
                             <div class="day1">
+
                             </div>
                             <div class="icon-1">
 
